--- a/style.css
+++ b/style.css
@@ -235,3 +235,73 @@ margin-top: 10px;
 .footer-nmv{
     padding: 50px;
 }
+@media(min-width:380px) and (max-width:430px){
+.container{
+    width: 100%;
+    overflow-x: hidden;
+}
+    h1{
+     font-size: 24px;
+ 
+ }
+ #service{
+     visibility: hidden;
+ }
+ .nav{
+     width: 90%;
+     margin: 0 auto;
+ }
+.logo{
+    font-size: 20px;
+}
+.main{
+    display: flex;
+    flex-wrap: wrap;
+}
+.card{
+    background-color:white;
+    height: 200px;
+}
+#card-desc{
+    text-align: center;
+}
+.numanova{
+    display: flex;
+   flex-direction: column;
+
+}
+.about{
+    text-align: center;
+}
+#about{
+    font-size: 20px;
+}
+.info{
+    width: 90%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items:center;
+}
+.img{
+    background-color: white;
+   margin-top:140px ;
+}
+#alina{
+    font-size: 24px;
+}
+#info{
+    width: 85%;
+}
+.skills{
+    width: 85%;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 100px;
+    gap: 10px;
+}
+#order{
+    font-size: 14px ;
+}
+}
