--- a/style.css
+++ b/style.css
@@ -476,3 +476,10 @@ flex-direction: column;
     align-items:center;
 }
 }
+a{
+    list-style: none;
+    text-decoration: none;
+}
+a:hover{
+    color:black;
+}
